compiler-core/src/go/tests/snapshots/gleam_core__go__tests__case__pointless.snap
---
source: compiler-core/src/go/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  case x {
    _ -> x
  }
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[I gleam_P.Type[I]](x I) I {
  {
    return x
  }
}
